Added MPfmView for gradient backgrounds (based on NSView) A lot of work on the XIB file for the MainWindow, now using MPfmView throughout the window.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@593 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Windows\Controllers\PreferencesWindowController.cs" />
     <Compile Include="Helpers\CocoaHelper.cs" />
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Controls\MPfmView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
