Added images for Playlist window. Added empty presenter, view and view controller for the Splash screen.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@594 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -90,6 +90,9 @@
     <Compile Include="Models\SongBrowserQueryEntity.cs" />
     <Compile Include="Models\PlayerVolumeEntity.cs" />
     <Compile Include="Models\PlayerTimeShiftingEntity.cs" />
+    <Compile Include="Presenters\SplashPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ISplashPresenter.cs" />
+    <Compile Include="Views\ISplashView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
