Added custom fonts Added splash screen
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@595 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Ninject">
-      <HintPath>Lib\Ninject.dll</HintPath>
+      <HintPath>..\MPfm.Mac\Lib\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="AutoMapper">
       <HintPath>Lib\AutoMapper.dll</HintPath>
@@ -93,6 +93,7 @@
     <Compile Include="Presenters\SplashPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISplashPresenter.cs" />
     <Compile Include="Views\ISplashView.cs" />
+    <Compile Include="TinyIoC\TinyIoC.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -123,6 +124,7 @@
     <Folder Include="Helpers\" />
     <Folder Include="Services\Interfaces\" />
     <Folder Include="Presenters\Interfaces\" />
+    <Folder Include="TinyIoC\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
