Added other Titillium fonts Added Junction font Started adding fonts in main window
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@598 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -265,6 +265,15 @@
     <Content Include="libbass_fx.dylib">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\Fonts\TitilliumText25L001.otf" />
+    <Content Include="Resources\Fonts\TitilliumText25L002.otf" />
+    <Content Include="Resources\Fonts\TitilliumText25L003.otf" />
+    <Content Include="Resources\Fonts\TitilliumText25L004.otf" />
+    <Content Include="Resources\Fonts\TitilliumText25L005.otf" />
+    <Content Include="Resources\Fonts\TitilliumMaps29L001.otf" />
+    <Content Include="Resources\Fonts\TitilliumMaps29L002.otf" />
+    <Content Include="Resources\Fonts\TitilliumMaps29L003.otf" />
+    <Content Include="Resources\Fonts\Junction.otf" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
