Added new fonts A LOT of visual work on the Main Window (use custom fonts, custom gradients, etc.). Starting to look like the Windows Version. Added header gradient to MPfmView And more
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@599 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -274,6 +274,8 @@
     <Content Include="Resources\Fonts\TitilliumMaps29L002.otf" />
     <Content Include="Resources\Fonts\TitilliumMaps29L003.otf" />
     <Content Include="Resources\Fonts\Junction.otf" />
+    <Content Include="Resources\Fonts\Inconsolata.otf" />
+    <Content Include="Resources\Fonts\DroidSansMono.ttf" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
