Added MPfmTableCellView Added MPfmScrollView with a working prototype to sync scrolling in different scroll views (might be the solution for the album cover in the Song Browser)
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@601 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -179,6 +179,8 @@
     <Compile Include="Windows\Controllers\SplashWindowController.cs" />
     <Compile Include="Controls\MPfmButton.cs" />
     <Compile Include="Objects\SongBrowserSource.cs" />
+    <Compile Include="Controls\MPfmTableCellView.cs" />
+    <Compile Include="Controls\MPfmScrollView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
