--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -181,6 +181,8 @@
     <Compile Include="Objects\SongBrowserSource.cs" />
     <Compile Include="Controls\MPfmTableCellView.cs" />
     <Compile Include="Controls\MPfmScrollView.cs" />
+    <Compile Include="Objects\AlbumCoverSource.cs" />
+    <Compile Include="Controls\MPfmAlbumCoverView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
