Added a lot of helper methods for CGContext in CocoaHelper (draw gradient, draw text, measure string, etc) The album cover zone now displays the artist name and album title.
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@604 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -83,7 +83,7 @@
     <EnablePackageSigning>False</EnablePackageSigning>
     <Externalconsole>True</Externalconsole>
     <EnableCodeSigning>False</EnableCodeSigning>
-    <CreatePackage>False</CreatePackage>
+    <CreatePackage>True</CreatePackage>
     <CodeSigningKey>Mac Developer</CodeSigningKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release_Linux|AnyCPU' ">
