Added CacheStore and CacheStoreItem to MPfm.Core Added AlbumCoverCacheService to hold album art (using CacheStore) Added album covers in the album cover table view. Centered/Fixed position of artist name/album title Very awesome so far. :)
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@606 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Controls\MPfmScrollView.cs" />
     <Compile Include="Objects\AlbumCoverSource.cs" />
     <Compile Include="Controls\MPfmAlbumCoverView.cs" />
+    <Compile Include="Objects\AlbumCoverCacheService.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
