Added custom row control, but doesn't really work so far. Bug fix CacheStore (should finally be thread safe) More bug fixes
Related to issue #381.

git-svn-id: http://hamster-svn/svn/repos/base@609 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/branches/current/MPfm.Mac/MPfm.Mac.csproj
@@ -149,7 +149,6 @@
     <Compile Include="Objects\LibraryBrowserOutlineViewDelegate.cs" />
     <Compile Include="Objects\MainSplitViewDelegate.cs" />
     <Compile Include="Objects\ImageResources.cs" />
-    <Compile Include="Objects\SongBrowserDataSource.cs" />
     <Compile Include="Objects\SongBrowserItem.cs" />
     <Compile Include="Objects\SongBrowserTableViewDelegate.cs" />
     <Compile Include="Windows\Controllers\UpdateLibraryWindowController.cs" />
@@ -184,6 +183,7 @@
     <Compile Include="Controls\MPfmAlbumCoverView.cs" />
     <Compile Include="Objects\AlbumCoverCacheService.cs" />
     <Compile Include="Helpers\AlbumCoverHelper.cs" />
+    <Compile Include="Controls\MPfmTableRowView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="MainWindow.xib" />
